adds new fields to go slim presets response
see for details
https://www.ebi.ac.uk/panda/jira/browse/GOA-3693